--- a/src/app.html
+++ b/src/app.html
@@ -22,6 +22,7 @@
 		/>
 		<link rel="manifest" href="%sveltekit.assets%/favicon/site.webmanifest" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Bananarchy Early Access</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
